--- a/index.html
+++ b/index.html
@@ -29,16 +29,14 @@
                   <div class="pan">
                         <p> <strong> NEW PAN INDIA </strong> </p>
                   </div>
-
                   <div class="h2">
- 
                         <h2> <strong>1.PERSONAL INFORMATION </strong> </h2>
                   </div>
                   <div class="applicant">
                         <form onsubmit="pan()">
                               <label> <strong> Applicacnt Name </strong> </label><br>
                               <span class="firstname">
-                                    <input type="text" id="first" placeholder="First_name" name="first_name">
+                                    <input type="text" id="applicantnames" placeholder="First_name" name="first_name">
                               </span>
                               <span calss="middlename">
                                     <input type="text" id="middle" placeholder="middle name" name="middle name">
@@ -85,7 +83,7 @@
                               <label> <strong>Date Of Birth</strong> </label><br>
                               <input type="date" name="date of birth" id="dob" placeholder="date of birth"> <br>
                               <label> <strong> Aadhar Number </strong> </label><br>
-                              <input type="tel" name="number" id="aadharnumber" minlength="12" placeholder="Aadhar number"><br>
+                              <input type="tel" name="number" id="aadharnumber" minlength="12" placeholder="Aadhar Number"><br>
 
                               <label> <strong> Gender </strong> </label>
                               <br>
@@ -101,7 +99,7 @@
                         <br>
                         <br>
                   </div>
-                  ,
+            
                   <script src="index.js"></script>
             </div>
       </div>
