--- a/requiredproof.html
+++ b/requiredproof.html
@@ -15,7 +15,7 @@
         <ul>
             <li>AADHAAR Card issued by UIDAI (In Copy)</li>
             <li>Driving License (In Copy)</li>
-            <li>ank certificate in original on letter head of the branch (along with name & stamp of issuing officer) containing duly attested photograph and bank A/c no of the Applicant.<strong> Click here to Download the Format </strong> </li>
+            <li>Bank certificate in original on letter head of the branch (along with name & stamp of issuing officer) containing duly attested photograph and bank A/c no of the Applicant.<strong> Click here to Download the Format </strong> </li>
             <li>Passport (In Copy)</li>
             <li>Photo ID card issued by Central Govt or State Govt or a Public Sector Undertaking (In Copy)</li>
             <li>Ration Card having photograph of the applicant. (In Copy)</li>
