--- a/registration.html
+++ b/registration.html
@@ -23,7 +23,7 @@
             <br>
 
             <label> <strong> EMAIL ID </strong> </label>
-            <input type="email" id="email1" placeholder="EmailID" required>
+            <input type="email" id="email1" placeholder="EmailID"  required>
             <br>
             <br>
             <label> <strong> MOBILE NUMBER </strong> </label>
@@ -35,11 +35,11 @@
             <br>
             <br>
             <label> <strong>CREATE PASSWORD</strong> </label>
-            <input type="password" id="password" name="password" placeholder="Password" required>
+            <input type="password" id="password" name="password" pattern="[a-z]{1,15}" placeholder="Password" required>
             <br>
             <br>
             <label> <strong>CONFIRM PASSWORD </strong> </label>
-            <input type="password" id="confirmpassword" name="confirmpassword" placeholder="Confirm Password">
+            <input type="password" id="confirmpassword" name="confirmpassword" pattern="[a-z]{1,15}" placeholder="Confirm Password">
             <br>
             <br>
             <button class="button" type="submit">submit</button><br>
