--- a/header.html
+++ b/header.html
@@ -4,5 +4,6 @@
         <a class="navbar" href="aadhar.html"> AADHAR</a>
         <a class="navbar" href="requiredproof.html"> REQUIRED PROOF</a>
         <a class="navbar" href="driving.html"> DRIVING APPLICATION</a>
+        <a class="navbar" href="logoutpage.html">LOGOUT</a>
     </nav>
 </header>
