--- a/residential.html
+++ b/residential.html
@@ -8,6 +8,7 @@
 </head>
 <link rel="stylesheet" href="residential.css">
 <body>
+    <a href="logoutpage.html"><h5> LOGOUT </h5> </a>
     <div class="overall">
         <h2> 2.RESIDENTIAL ADDRESS OF APPLICANT</h2>
         <br>
