--- a/registration.html
+++ b/registration.html
@@ -16,18 +16,18 @@
     <div class="overall">
         <form onsubmit="registration()">
             <label> <strong> YOUR NAME </strong> </label>
-            <input type="text" id="yourname" placeholder="your name" required> <br>
+            <input type="text" id="yourname" placeholder="your name"  autocomplete="off" required> <br>
             <br>
             <label> <strong> DATE OF BIRTH </strong> </label>
             <input type="date" id="datebirth" placeholder="DateOfBirth" ><br>
             <br>
 
             <label> <strong> EMAIL ID </strong> </label>
-            <input type="email" id="email1" placeholder="EmailID"  required>
+            <input type="email" id="email1" placeholder="EmailID" autocomplete="off" required>
             <br>
             <br>
             <label> <strong> MOBILE NUMBER </strong> </label>
-            <input type="tel" id="number" pattern="[0-9]{10}"  placeholder="MobileNumber" required>
+            <input type="tel" id="number" pattern="[0-9]{10}" autocomplete="off"  placeholder="MobileNumber" required>
             <br>
             <br>
             <label> <strong>USERNAME</strong> </label>
