--- a/details.html
+++ b/details.html
@@ -35,6 +35,7 @@ h3{
     <div class="align">
         <h3>APPLICANTDETAILS</h3>
     <table>
+        <caption></caption>
         <tr>
             <th scope="row"> NAME:</th>
             <td id="username"></td>
