--- a/editdetails.html
+++ b/editdetails.html
@@ -32,7 +32,7 @@
     <div class="align">
         <h3>APPLICANTDETAILS</h3>
         <table>
-
+<caption></caption>
             <tr>
                 <th scope="row"> NAME:</th>
                 <td>
