--- a/requiredproof.html
+++ b/requiredproof.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="requiredproof.css">
 </head>
  <body>  
+    <div class="usernametopview">
+        <label>USERNAME :</label>
+        <label id="userNameView"></label>
+  </div>
         <div class="overall">
             <h2>DOCUMENTS REQUIRED - INDIA</h2>
         <div class="container">
