--- a/editdetails.html
+++ b/editdetails.html
@@ -23,7 +23,7 @@
 }
         h3 {
             text-align: center;
-        }8
+        }
     </style>
 </head>
 
@@ -34,9 +34,9 @@
         <table>
 <caption></caption>
             <tr>
-                <th scope="row"> NAME:</th>
+              <strong> <th scope="row"> NAME:</th>
                 <td>
-                    <input type="text" id="username">
+                    <input type="text" id="username"></strong> 
                 </td>
             </tr>
             <tr>
