--- a/index.html
+++ b/index.html
@@ -42,54 +42,54 @@
                         <form onsubmit="pan()">
                               <label> <strong> Applicacnt Name </strong> </label><br>
                               <span class="firstname">
-                                    <input type="text" id="applicantnames" placeholder="First_name" name="first_name">
+                                    <input type="text" id="applicantnames" placeholder="First_name" pattern="[A-Za-z]{3,15}"  name="first_name">
                               </span>
                               <span calss="middlename">
-                                    <input type="text" id="middle" placeholder="middle name" name="middle name">
+                                    <input type="text" id="middle" placeholder="middle name" pattern="[A-Za-z]{3,15}" name="middle name">
                               </span>
                               <span class="lastname">
-                                    <input type="text" id="last" placeholder="last name" name="last name">
+                                    <input type="text" id="last" placeholder="last name" pattern="[A-Za-z]{3,15}" name="last name">
                               </span>
                               <br>
                               <label> <strong> Father Name </strong> </label><br>
                               <span class="fatherfirstname">
-                                    <input type="text" id="fathername" placeholder="Father First name"
+                                    <input type="text" id="fathername" pattern="[A-Za-z]{3,15}" placeholder="Father First name"
                                           name="father first name">
                               </span>
                               <span class="fathermiddlename">
-                                    <input type="text" id="fathermiddle" placeholder="father middle name"
+                                    <input type="text" id="fathermiddle" pattern="[A-Za-z]{3,15}" placeholder="father middle name"
                                           name="father middle name">
                               </span>
                               <span class="fatherlastname">
-                                    <input type="text" id="fatherlast" placeholder="father last name"
+                                    <input type="text" id="fatherlast" pattern="[A-Za-z]{3,15}" placeholder="father last name"
                                           name="father last name">
                               </span>
                               <br>
-                              <label> <strong> Mather Name </strong> </label><br>
+                              <label> <strong> Mother Name </strong> </label><br>
                               <span class="motherfirstname">
-                                    <input type="text" id="mathername" placeholder="mother First name"
+                                    <input type="text" id="mathername" pattern="[A-Za-z]{3,15}" placeholder="mother First name"
                                           name="mother_first_name">
                               </span>
                               <span class="mothermiddlename">
-                                    <input type="text" id="mothermiddle" placeholder="mother middle name"
+                                    <input type="text" id="mothermiddle" pattern="[A-Za-z]{3,15}" placeholder="mother middle name"
                                           name="mother middle name">
                               </span>
                               <span class="motherlastname">
-                                    <input type="text" id="motherlast" placeholder="mather last name"
+                                    <input type="text" id="motherlast" pattern="[A-Za-z]{3,15}" placeholder="mather last name"
                                           name="mother last name">
                               </span><br>
                               <label> <strong> Mobile No </strong> </label><br>
-                              <input type="tel" name="Mobile number" id="mobilenumber" pattern="[0-9]{10}"
+                              <input type="tel" name="Mobile number" id="mobilenumber" pattern="[6789][0-9]{9}"
                                     placeholder="Mobile number">
                               <br>
                               <label> <strong> Email ID </strong> </label><br>
-                              <input type="email" name="email" id="Email" placeholder="Email">
+                              <input type="email" name="email" id="Email" placeholder="Email"  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
                               <br>
 
                               <label> <strong>Date Of Birth</strong> </label><br>
-                              <input type="date" name="date of birth" id="dob" placeholder="date of birth"> <br>
+                              <input type="text" name="date of birth" id="dob" pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}" placeholder="date of birth"> <br>
                               <label> <strong> Aadhar Number </strong> </label><br>
-                              <input type="tel" name="number" id="aadharnumber" minlength="12"
+                              <input type="tel" name="number" id="aadharnumber" 
                                     placeholder="Aadhar Number"><br>
 
                               <label> <strong> Gender </strong> </label>
