--- a/details.html
+++ b/details.html
@@ -98,6 +98,13 @@ h3{
    <button> <a href="editdetails.html" >EDIT</a>&nbsp;&nbsp;&nbsp;&nbsp;</button>
     <input type="submit" id="submit" onclick="alert('Your Application Is Successfull Submitted')" >
 
+    <button onclick="window.print()">Print this page</button>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
+    integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+</script>
+
 </div>
 </form>
 </div>
@@ -160,10 +167,24 @@ let personobj={
     }
     console.log(personobj)
 </script>
+
+
 <script>
     let nameFile = JSON.parse(localStorage.getItem('nameform'));
     console.log(nameFile);
     document.querySelector("#userNameView").innerHTML = nameFile.userName;
+
+
+    const dbUsername = 'apikey-v2-2q4ay3thu4r9w4i4o1vr74ypzd4tyr1lzxlt9916cky2';
+        const dbPassword = 'bd763fb0b51e2d8e968a8154ae9b7869';
+        const basicAuth = 'Basic ' + btoa(dbUsername + ':' + dbPassword);
+        
+    const url = "https://aacd9391-7b8b-4ac4-b12c-6b785e540ced-bluemix.cloudantnosqldb.appdomain.cloud/idproof_personaldetails"
+
+    axios.post(url, personobj,{ headers: {'Authorization': basicAuth }}).then(res => {
+            console.log(personobj);
+            alert("successfull")
+          }).catch(err => alert("error "))
 </script>
 
 </body>
