--- a/header.html
+++ b/header.html
@@ -1,9 +1,9 @@
 <header>
     <nav class="navbar">
         <a class="navbar" href="registration.html"> REGISTRATION</a>
-        <a class="navbar" href="aadhar.html"> AADHAR</a>
+        <a class="navbar" href="aadhar.html"> MODIFY</a>
         <a class="navbar" href="requiredproof.html"> REQUIRED PROOF</a>
-        <a class="navbar" href="driving.html"> DRIVING APPLICATION</a>
+        <a class="navbar" href="listapplication.html"> LIST OF APPLICATION</a>
         <a class="navbar" href="logoutpage.html">LOGOUT</a>
     </nav>
 </header>
