--- a/registration.html
+++ b/registration.html
@@ -1,51 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REGISTRATION</title>
-</head>
-<body>
+    <script src="validator.js"></script>
+    <script src="password.js"></script>
+    <script src="registration.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
         integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    </script>
+        </script>
+
     <link rel="stylesheet" href="registration.css">
-    <h1>REGISTRATION FIRST</h1>
+</head>
+
+<body>
+
+    <h1>REGISTRATION</h1>
     <div class="overall">
         <form onsubmit="registration()">
             <label> <strong> YOUR NAME </strong> </label>
-            <input type="text" id="yourname" placeholder="your name"  autocomplete="off" required> <br>
+            <input type="text" id="yourname" placeholder="your name" autocomplete="off" required> <br>
             <br>
             <label> <strong> DATE OF BIRTH </strong> </label>
-            <input type="date" id="datebirth" placeholder="DateOfBirth" ><br>
+            <input type="date" id="datebirth" placeholder="DateOfBirth"><br>
             <br>
 
             <label> <strong> EMAIL ID </strong> </label>
-            <input type="email" id="email1" placeholder="EmailID" autocomplete="off" required>
+            <input type="email" id="email1" placeholder="EmailID" required>
             <br>
             <br>
             <label> <strong> MOBILE NUMBER </strong> </label>
-            <input type="tel" id="number" pattern="[0-9]{10}" autocomplete="off"  placeholder="MobileNumber" required>
+            <input type="tel" id="mobileNo" pattern="[0-9]{10}" placeholder="MobileNumber" required>
             <br>
             <br>
             <label> <strong>USERNAME</strong> </label>
-            <input type="text" id="Username" placeholder="UserName" required>
+            <input type="text" id="username" placeholder="userName" required>
             <br>
             <br>
             <label> <strong>CREATE PASSWORD</strong> </label>
-            <input type="password" id="password" name="password" pattern="[a-z]{1,15}" placeholder="Password" required>
+            <input type="password" id="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                placeholder="Password" required>
             <br>
             <br>
             <label> <strong>CONFIRM PASSWORD </strong> </label>
-            <input type="password" id="confirmpassword" name="confirmpassword" pattern="[a-z]{1,15}" placeholder="Confirm Password">
+            <input type="password" id="confirmpassword" name="confirmpassword"
+                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Confirm Password">
             <br>
             <br>
             <button class="button" type="submit">submit</button><br>
             <br>
         </form>
     </div>
-    <script src="registration.js"></script>
 </body>
+
 </html>
