--- a/editpage.html
+++ b/editpage.html
@@ -89,6 +89,7 @@
                         </td>
                     </tr>
                 </table>
+                <input type="submit" onclick="modifyinformation()" id="submitbutton" value="DONE">
    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
     integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
