--- a/editpage.html
+++ b/editpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MODIFYDETAILS</title>
 </head>
 <body>
 
@@ -89,7 +89,7 @@
                         </td>
                     </tr>
                 </table>
-                <input type="submit" onclick="modifyinformation()" id="submitbutton" value="DONE">
+                <input type="submit"  onclick="modifyInformation()" id="submitbutton" value="DONE">
    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
     integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
