--- a/loginpage.html
+++ b/loginpage.html
@@ -23,7 +23,7 @@
         <label for="uname"><strong>Username</strong></label>
         <input type="text" id="username" placeholder="Enter Username" name="uname">
         <label for="psw"><strong>Password</strong></label>
-        <input type="password" minlength="6" id="password" placeholder="Enter Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
+        <input type="password" minlength="6" id="password" placeholder="Enter Password" >
         <button type="submit">Login</button>
          </div>  
     </form>
