--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
+            integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
       <link rel="stylesheet" href="style.css">
 
       <img src="asset/image/PANCardLogo.png" alt="pancard">
@@ -27,9 +30,9 @@
                   of PAN applications.</marquee>
       </div>
       <div class="usernametopview">
-      <label>USERNAME :</label>
-      <label id="userNameView"></label>
-</div>
+            <label>USERNAME :</label>
+            <label id="userNameView"></label>
+      </div>
       <div class="overall">
             <div class="personal">
                   <div class="pan">
@@ -42,55 +45,77 @@
                         <form onsubmit="pan()">
                               <label> <strong> Applicacnt Name </strong> </label><br>
                               <span class="firstname">
-                                    <input type="text" id="applicantnames" placeholder="First_name" pattern="[A-Za-z]{3,15}"  name="first_name">
+                                    <input type="text" id="applicantnames" placeholder="First_name"
+                                          pattern="[A-Za-z]{3,15}" name="first_name">
                               </span>
                               <span calss="middlename">
-                                    <input type="text" id="middle" placeholder="middle name" pattern="[A-Za-z]{3,15}" name="middle name">
+                                    <input type="text" id="middle" placeholder="middle name" pattern="[A-Za-z]{3,15}"
+                                          name="middle name">
                               </span>
                               <span class="lastname">
-                                    <input type="text" id="last" placeholder="last name" pattern="[A-Za-z]{3,15}" name="last name">
+                                    <input type="text" id="last" placeholder="last name" pattern="[A-Za-z]{3,15}"
+                                          name="last name">
                               </span>
                               <br>
                               <label> <strong> Father Name </strong> </label><br>
                               <span class="fatherfirstname">
-                                    <input type="text" id="fathername" pattern="[A-Za-z]{3,15}" placeholder="Father First name"
-                                          name="father first name">
+                                    <input type="text" id="fathername" pattern="[A-Za-z]{3,15}"
+                                          placeholder="Father First name" name="father first name">
                               </span>
                               <span class="fathermiddlename">
-                                    <input type="text" id="fathermiddle" pattern="[A-Za-z]{3,15}" placeholder="father middle name"
-                                          name="father middle name">
+                                    <input type="text" id="fathermiddle" pattern="[A-Za-z]{3,15}"
+                                          placeholder="father middle name" name="father middle name">
                               </span>
                               <span class="fatherlastname">
-                                    <input type="text" id="fatherlast" pattern="[A-Za-z]{3,15}" placeholder="father last name"
-                                          name="father last name">
+                                    <input type="text" id="fatherlast" pattern="[A-Za-z]{3,15}"
+                                          placeholder="father last name" name="father last name">
                               </span>
                               <br>
                               <label> <strong> Mother Name </strong> </label><br>
                               <span class="motherfirstname">
-                                    <input type="text" id="mathername" pattern="[A-Za-z]{3,15}" placeholder="mother First name"
-                                          name="mother_first_name">
+                                    <input type="text" id="mathername" pattern="[A-Za-z]{3,15}"
+                                          placeholder="mother First name" name="mother_first_name">
                               </span>
                               <span class="mothermiddlename">
-                                    <input type="text" id="mothermiddle" pattern="[A-Za-z]{3,15}" placeholder="mother middle name"
-                                          name="mother middle name">
+                                    <input type="text" id="mothermiddle" pattern="[A-Za-z]{3,15}"
+                                          placeholder="mother middle name" name="mother middle name">
                               </span>
                               <span class="motherlastname">
-                                    <input type="text" id="motherlast" pattern="[A-Za-z]{3,15}" placeholder="mather last name"
-                                          name="mother last name">
+                                    <input type="text" id="motherlast" pattern="[A-Za-z]{3,15}"
+                                          placeholder="mather last name" name="mother last name">
                               </span><br>
                               <label> <strong> Mobile No </strong> </label><br>
                               <input type="tel" name="Mobile number" id="mobilenumber" pattern="[6789][0-9]{9}"
                                     placeholder="Mobile number">
                               <br>
                               <label> <strong> Email ID </strong> </label><br>
-                              <input type="email" name="email" id="Email" placeholder="Email"  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+                              <input type="email" name="email" id="Email" placeholder="Email"
+                                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
                               <br>
 
                               <label> <strong>Date Of Birth</strong> </label><br>
-                              <input type="text" name="date of birth" id="dob" pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}" placeholder="date of birth"> <br>
+                              <input type="text" name="date of birth" id="dob"
+                                    pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}"
+                                    placeholder="date of birth"> <br>
                               <label> <strong> Aadhar Number </strong> </label><br>
-                              <input type="tel" name="number" id="aadharnumber" 
-                                    placeholder="Aadhar Number"><br>
+                              <input type="tel" name="number" id="aadharnumber" placeholder="Aadhar Number"><br>
+
+                              <label> <strong> No./ Building / Village </strong> </label><br>
+                              <input class="no" id="no" type="text" placeholder="No./ Building / Village">
+                              <br>
+                              <label> <strong> Area/ Road/ P.O. </strong> </label><br>
+                              <input class="area" id="area" type="text" name="Area" placeholder="Area/ Road/ P.O.">
+                              <br>
+                              <label> <strong> City/ Town/ District</strong> </label><br>
+                              <input class="city" id="city" type="text" name=" City"
+                                    placeholder=" City/ Town/ District">
+                              <br>
+                              <label> <strong> State </strong> </label><br>
+                              <input class="state" id="state" type="text" name="State" placeholder="state">
+                              <br>
+                              <label> <strong> Pin Code </strong> </label><br>
+                              <input class="pin" id="pin" type="text" name="Pin Code" placeholder="Pin Code">
+                              <br>
 
                               <label> <strong> Gender </strong> </label>
                               <br>
@@ -108,9 +133,9 @@
                   </div>
 
                   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
-        integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer">
-    </script>
+                        integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
+                        crossorigin="anonymous" referrerpolicy="no-referrer">
+                        </script>
                   <script src="index.js">
 
                   </script>
