--- a/registration.html
+++ b/registration.html
@@ -42,13 +42,13 @@
             <br>
             <br>
             <label> <strong>CREATE PASSWORD</strong> </label>
-            <input type="password" id="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+            <input type="password" id="password" name="password" 
                 placeholder="Password" required>
             <br>
             <br>
             <label> <strong>CONFIRM PASSWORD </strong> </label>
             <input type="password" id="confirmpassword" name="confirmpassword"
-                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Confirm Password">
+             placeholder="Confirm Password">
             <br>
             <br>
             <button class="button" type="submit">submit</button><br>
