--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
         <a class="navbar" href="registration.html"> REGISTRATION</a>
         <a class="navbar" href="listapplication.html"> MODIFY</a>
         <a class="navbar" href="requiredproof.html"> REQUIRED PROOF</a>
-        <a class="navbar" href="listapplication.html"> LIST OF APPLICATION</a>
+        <a class="navbar" href="viewlist.html"> LIST OF APPLICATION</a>
         <a class="navbar" href="logoutpage.html">LOGOUT</a>
     </nav>
 </header>
