--- a/index.html
+++ b/index.html
@@ -62,28 +62,13 @@
                                     <input type="text" id="fathername" pattern="[A-Za-z]{3,15}"
                                           placeholder="Father First name" name="father first name">
                               </span>
-                              <span class="fathermiddlename">
-                                    <input type="text" id="fathermiddle" pattern="[A-Za-z]{3,15}"
-                                          placeholder="father middle name" name="father middle name">
-                              </span>
-                              <span class="fatherlastname">
-                                    <input type="text" id="fatherlast" pattern="[A-Za-z]{3,15}"
-                                          placeholder="father last name" name="father last name">
-                              </span>
                               <br>
                               <label> <strong> Mother Name </strong> </label><br>
                               <span class="motherfirstname">
                                     <input type="text" id="mathername" pattern="[A-Za-z]{3,15}"
                                           placeholder="mother First name" name="mother_first_name">
                               </span>
-                              <span class="mothermiddlename">
-                                    <input type="text" id="mothermiddle" pattern="[A-Za-z]{3,15}"
-                                          placeholder="mother middle name" name="mother middle name">
-                              </span>
-                              <span class="motherlastname">
-                                    <input type="text" id="motherlast" pattern="[A-Za-z]{3,15}"
-                                          placeholder="mather last name" name="mother last name">
-                              </span><br>
+                              <br>
                               <label> <strong> Mobile No </strong> </label><br>
                               <input type="tel" name="Mobile number" id="mobilenumber" pattern="[6789][0-9]{9}"
                                     placeholder="Mobile number">
@@ -94,11 +79,11 @@
                               <br>
 
                               <label> <strong>Date Of Birth</strong> </label><br>
-                              <input type="text" name="date of birth" id="dob"
+                              <input type="date" name="date of birth" id="dob"
                                     pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}"
                                     placeholder="date of birth"> <br>
                               <label> <strong> Aadhar Number </strong> </label><br>
-                              <input type="tel" name="number" id="aadharnumber" placeholder="Aadhar Number"><br>
+                              <input type="tel" name="number" id="aadharnumber" pattern="[0-9]{12}" placeholder="Aadhar Number"><br>
 
                               <label> <strong> No./ Building / Village </strong> </label><br>
                               <input class="no" id="no" type="text" placeholder="No./ Building / Village">
@@ -131,6 +116,8 @@
                         <br>
                         <br>
                   </div>
+
+                  <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.6/dayjs.min.js" integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
                   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
                         integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
