--- a/editpage.html
+++ b/editpage.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MODIFYDETAILS</title>
+    <style>
+        .editpage{
+            box-shadow: 1px;
+        }
+    </style>
 </head>
 <body>
-
+<div class="editpage">
     <table>
         <caption></caption>
                     <tr>
@@ -89,8 +94,9 @@
                         </td>
                     </tr>
                 </table>
+            
                 <input type="submit"  onclick="modifyInformation()" id="submitbutton" value="DONE">
-   
+            </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
     integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
