--- a/editpage.html
+++ b/editpage.html
@@ -6,8 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MODIFYDETAILS</title>
     <style>
+         table {
+            width: 850px;
+            height: 580px;
+            margin: auto;
+            padding: 20px 20px 20px 20px;
+            border-radius: 20px;
+            border-style: solid;
+        }
+        .submitbutton{
+            margin-top: 1%;
+    margin-bottom: 2%;
+    text-align: center;
+        }
         .editpage{
             box-shadow: 1px;
+            margin-left: 5%;
+            margin-top: 2%;
+            border-radius: 1px solid;
+            border: 1px;
         }
     </style>
 </head>
@@ -94,8 +111,7 @@
                         </td>
                     </tr>
                 </table>
-            
-                <input type="submit"  onclick="modifyInformation()" id="submitbutton" value="DONE">
+            <div class="submitbutton">    <input type="submit"  onclick="modifyInformation()"  value="DONE"></div>
             </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
     integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
