--- a/editpage.html
+++ b/editpage.html
@@ -111,7 +111,9 @@
                         </td>
                     </tr>
                 </table>
-            <div class="submitbutton">    <input type="submit"  onclick="modifyInformation()"  value="DONE"></div>
+            <div class="submitbutton">    <input type="submit"  onclick="modifyInformation()"  value="DONE">
+                <button onclick="window.print()">Print this page</button>
+            </div>
             </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
     integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
