--- a/registration.html
+++ b/registration.html
@@ -18,6 +18,9 @@
 </head>
 
 <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.6/dayjs.min.js"
+        integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <h1>REGISTRATION</h1>
     <div class="overall">
@@ -42,21 +45,20 @@
             <br>
             <br>
             <label> <strong>CREATE PASSWORD</strong> </label>
-            <input type="password" id="password" name="password" 
-                placeholder="Password" required>
+            <input type="password" id="password" name="password" placeholder="Password" required>
             <br>
             <br>
             <label> <strong>CONFIRM PASSWORD </strong> </label>
-            <input type="password" id="confirmpassword" name="confirmpassword"
-             placeholder="Confirm Password">
+            <input type="password" id="confirmpassword" name="confirmpassword" placeholder="Confirm Password">
             <br>
             <br>
             <button class="button" type="submit">submit</button><br>
             <br>
         </form>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.6/dayjs.min.js" integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+
+    <script src="serviceLayer.js"></script>
 </body>
 
 
