--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
                                     pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}"
                                     placeholder="date of birth"> <br>
                               <label> <strong> Aadhar Number </strong> </label><br>
-                              <input type="tel" name="number" id="aadharnumber" pattern="[0-9]{12}" placeholder="Aadhar Number"><br>
+                              <input type="tel" name="number" id="aadharnumber" pattern="[0-9]{12}"
+                                    placeholder="Aadhar Number"><br>
 
                               <label> <strong> No./ Building / Village </strong> </label><br>
                               <input class="no" id="no" type="text" placeholder="No./ Building / Village">
@@ -117,20 +118,21 @@
                         <br>
                   </div>
 
-                  <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.6/dayjs.min.js" integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+                  <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.6/dayjs.min.js"
+                        integrity="sha512-bwD3VD/j6ypSSnyjuaURidZksoVx3L1RPvTkleC48SbHCZsemT3VKMD39KknPnH728LLXVMTisESIBOAb5/W0Q=="
+                        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
                   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
                         integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
                         crossorigin="anonymous" referrerpolicy="no-referrer">
                         </script>
-                  <script src="index.js">
-
-                  </script>
-                  <script>
+                  <script src="index.js"> </script>
+                 <script>
                         let nameFile = JSON.parse(localStorage.getItem('nameform'));
                         console.log(nameFile);
                         document.querySelector("#userNameView").innerHTML = nameFile.userName;
                   </script>
+                  <script src="serviceLayer.js"></script>
             </div>
       </div>
 
